--- a/Beacon/Beacon.csproj
+++ b/Beacon/Beacon.csproj
@@ -1,11 +1,34 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<?xml version="1.0" encoding="utf-8"?>
+<Project Sdk="Microsoft.NET.Sdk.Razor">
 
-  <PropertyGroup>
-    <OutputType>WinExe</OutputType>
-    <TargetFramework>net8.0-windows</TargetFramework>
-    <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <UseWPF>true</UseWPF>
-  </PropertyGroup>
+    <PropertyGroup>
+        <TargetFramework>net8.0-windows7.0</TargetFramework>
+        <OutputType>WinExe</OutputType>
+        <UseWPF>true</UseWPF>
+
+        <!-- Project Options -->
+        <LangVersion>latest</LangVersion>
+        <ImplicitUsings>enable</ImplicitUsings>
+        <RootNamespace>Beacon</RootNamespace>
+    </PropertyGroup>
+
+    <ItemGroup>
+      <Content Include="Blazor\wwwroot\css\input.css">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </Content>
+      <Content Include="Blazor\wwwroot\index.html">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </Content>
+    </ItemGroup>
+
+    <ItemGroup>
+        <PackageReference Include="Microsoft.AspNetCore.Components.WebView.Wpf" Version="8.*" />
+        <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.*" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Blazor\Components\" />
+      <Folder Include="Model\" />
+    </ItemGroup>
 
 </Project>
