--- a/Beacon/Beacon.csproj
+++ b/Beacon/Beacon.csproj
@@ -23,9 +23,11 @@
 	
 	
     <ItemGroup>
+        <PackageReference Include="AsyncAwaitBestPractices" Version="8.0.0" />
         <PackageReference Include="Majorsoft.Blazor.Components.Debounce" Version="1.5.0" />
         <PackageReference Include="Microsoft.AspNetCore.Components.WebView.Wpf" Version="8.*" />
         <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.*" />
+        <PackageReference Include="sqlite-net-pcl" Version="1.9.172" />
     </ItemGroup>
 
 </Project>
