--- a/Beacon/Beacon.csproj
+++ b/Beacon/Beacon.csproj
@@ -35,6 +35,7 @@
         <PackageReference Include="Microsoft.AspNetCore.Components.WebView.Wpf" Version="8.*" />
         <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.*" />
         <PackageReference Include="sqlite-net-pcl" Version="1.9.172" />
+        <PackageReference Include="WpfScreenHelper" Version="2.1.1" />
     </ItemGroup>
 
 </Project>
